--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mediapipe/hands": "^0.4.1646424915",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "fix-webm-duration": "^1.0.5",
+    "pixelmatch": "^5.3.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "wavesurfer.js": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
