--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "classnames": "^2.3.1",
     "fix-webm-duration": "^1.0.5",
     "pixelmatch": "^5.3.0",
+    "plotly.js": "^2.16.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "wavesurfer.js": "^6.2.0",
     "web-vitals": "^2.1.4"
