--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mediapipe/hands": "^0.4.1646424915",
     "@tensorflow-models/hand-pose-detection": "^2.0.0",
     "@tensorflow-models/pose-detection": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "fix-webm-duration": "^1.0.5",
+    "low-pass-filter": "^1.0.0",
     "pixelmatch": "^5.3.0",
     "plotly.js": "^2.16.1",
     "react": "^18.2.0",
@@ -19,7 +21,7 @@
     "react-icons": "^4.4.0",
     "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
-    "wavesurfer.js": "^6.2.0",
+    "wavesurfer.js": "^6.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
